feat(runtime): expose continuous session batching (#143)
* feat(runtime): expose continuous session batching

* docs(runtime): explain model-specific batching

* test(runtime): cover native batching selection

* docs(runtime): explain ragged prefill qualification

* test(runtime): cover ragged native selection

* chore(release): prepare ModelJars 0.1.36

* fix(docs): align release version examples